overflow possible fix2

--- a/src/components/Blocks/Frase.css
+++ b/src/components/Blocks/Frase.css
@@ -4,7 +4,7 @@
 	justify-content: center;
 	align-items: center;
 	color: #fff !important;
-	font-size: 2.3em;
+	font-size: 1.3em;
 	font-family: 'Quantico', sans-serif !important;
 	
 }
